# dispatch-tui

./: .claude-prompt  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md  build.rs  install.sh
.claude/: settings.json
.claude/commands/: queue-plan.md
.claude/skills/: lint.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  conventions.md  how-to.md  mcp.md  module-map.md  reference.md
docs/plans/: 195-dependabot-merge-bug.md  2026-03-25-interactive-agents-plan.md  245-review-tab-ux.md  252-detached-running-colors-on-card.md  334-programmable-epics-design.md  344-mcp-learning-tools.md  388-remove-cost-calculations.md  397-pre-dispatch-fetch.md  base-branch-wp1-data-model.md  base-branch-wp2-dispatch-mcp.md  base-branch-wp3-tui-skill-spec.md  code-review.md  epic29-1-db-migration.md  epic29-2-feed-runner.md  epic29-3-fetch-commands.md  epic29-4-tab-bar.md  epic29-5-remove-boards.md  task-412-mako-path-traversal.md
docs/research/: 2026-05-09-code-review.md  341-unified-learning-design.md  900-epic-grouping-design.md
docs/specs/: 2026-03-25-task-orchestrator-design.md  2026-04-07-review-agent-ux-design.md  agent-health.allium  core.allium  dependabot.allium  dispatch.allium  doctor.allium  epics.allium  feeds.allium  learnings.allium  mcp-task-tools.allium  observability.allium  pr-workflow.allium  projects.allium  repo-rag.allium  review-board.allium  review.allium  security.allium  split-pane.allium  task-orchestrator.allium  tasks.allium  tips.allium  todo.allium
hooks/: task-status-hook
plugin/.claude-plugin/: plugin.json
plugin/commands/: queue-plan.md
plugin/hooks/: hooks.json
scripts/: check-doc-paths.sh  check-no-test-sleep.sh  fetch-cve.sh  fetch-dependabot.sh  fetch-reviews.sh  fetch-security.sh  org.conf  repos.conf  test-fetch-reviews.sh  test_mako_path_traversal.py
src/: db.rs  dispatch.rs  editor.rs  feed.rs  git.rs  github.rs  lib.rs  main.rs  models.rs  plan.rs  process.rs  runtime.rs  service.rs  setup.rs  tips.rs  tmux.rs
src/cli/: caller_headers.rs  doctor.rs  mod.rs
src/db/: migrations.rs  mod.rs  queries.rs  tests.rs
src/dispatch/: agents.rs  finish.rs  mod.rs  prompts.rs  prompts_snapshots.rs  repo_map.rs  tests.rs  trust.rs  worktree.rs
src/feed/: exec.rs  ingest.rs  mod.rs  parse.rs  routing.rs
src/mcp/: handlers.rs  identity.rs  middleware.rs  mod.rs  trajectory.rs
src/models/: columns.rs  epics.rs  ids.rs  learnings.rs  mod.rs  paths.rs  projects.rs  review.rs  tasks.rs  todos.rs  url.rs  usage.rs
src/runtime/: agents.rs  commands.rs  editor.rs  epics.rs  learnings.rs  managed_feeds.rs  mod.rs  pr.rs  security.rs  settings.rs  split.rs  tasks.rs  tests.rs  todos.rs
src/service/: api.rs  clock.rs  (+9 more)
tests/: active_health.rs  caller_identity.rs  cli.rs  dispatch_status_lifecycle.rs  epic_lifecycle.rs  feed_sync.rs  githooks.rs  lifecycle.rs  managed_feeds.rs  project_delete.rs  review_agent_lifecycle.rs  review_lifecycle.rs  trajectory.rs  verify_command.rs
(+311 files in other folders)
