[package]
name = "dispatch-tui"
version = "0.2.0"
edition = "2021"
description = "A terminal kanban board for dispatching and managing AI agents"
license = "MIT"
repository = "https://github.com/Ragazoor/dispatch-tui"
readme = "README.md"
keywords = ["tui", "kanban", "claude", "ai-agents", "tmux"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"

[dev-dependencies]
proptest = "1"
cargo-husky = "1"

[[bin]]
name = "dispatch"
path = "src/main.rs"
