[package]
name = "dispatch-tui"
version = "0.2.0"
edition = "2021"
description = "A terminal kanban board for dispatching and managing AI agents"
license = "MIT"
repository = "https://github.com/Ragazoor/dispatch-tui"
readme = "README.md"
keywords = ["tui", "kanban", "claude", "ai-agents", "tmux"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
chrono = "0.4"
anyhow = "1"
include_dir = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
tui-tree-widget = "0.23"
fastembed = "5"

[dev-dependencies]
insta = "1"
proptest = "1"
tower = { version = "0.4", features = ["util"] }

[lints.clippy]
# Added by task #602 (2026-05-07): surfaces accidental panics in production paths
unwrap_used = "warn"
# Added by task #602 (2026-05-07): surfaces accidental panics in production paths
expect_used = "warn"

[[bin]]
name = "dispatch"
path = "src/main.rs"
